<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerEditProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollViewEditProfileActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/containerScrollViewEditProfileActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/size_16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerEditProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userProfilePicture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/profilePicture"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    android:title="@string/profilePicture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3"
                    app:shapeAppearance="@style/circular" />


                <TextView
                    android:id="@+id/imageButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginBottom="105dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/imageButtonDescription"
                    app:drawableStartCompat="@drawable/outline_photo_camera_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/containerEditTextEditProfileActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelFullName"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_16dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelNickname"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_16dp"
                        />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelEmail"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_16dp"
                        android:inputType="textEmailAddress" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelPhoneNumber"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_16dp"
                        android:inputType="phone" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelDescription"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_16dp" />


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

