<resources>

    <string name="appName">Profile</string>

    <!--ShowProfileActivity-->
    <string name="profilePicture">Profile Picture</string>

    <string name="fullName">Mario Rossi</string>
    <string name="nickname">mario</string>
    <string name="email">mariorossi@gmail.com</string>
    <string name="phoneNumber">1234567890</string>
    <string name="description">student, location</string>


    <string name="personalInfo">Personal Info</string>
    <string name="toolbarEditProfile">Edit Profile</string>
    <string name="editMenuProfile">edit menu profile</string>


    <!--Image Name for internal storage -->
    <string name="imageName">profilePicture</string>

    <!--EditProfileActivity-->
    <string name="labelFullName">Full Name</string>
    <string name="labelEmail">Email</string>
    <string name="labelNickname">Nickname</string>
    <string name="labelDescription">Description</string>
    <string name="labelPhoneNumber">Phone Number</string>

    <string name="camera">Take a picture from camera</string>
    <string name="gallery">Select from gallery</string>

    <string name="descriptionEditUserProfile">Edit User Profile</string>
    <string name="descriptionShowProfile">Show Profile</string>
    <string name="imageButtonDescription">Select Picture</string>



</resources>