<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/toolbarShowProfile"
    android:background="@color/purple_500"
    >
        <ImageView
            android:id="@+id/arrowBackUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/descriptionShowProfile"
            android:src="@drawable/outline_arrow_back_32"
            />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbarEditProfile"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:paddingEnd="@dimen/size_16dp"
            android:paddingStart="@dimen/size_16dp"
           >

        </TextView>
</androidx.appcompat.widget.Toolbar>